resetting to the reset. refactoring bad code takes too long to fix

--- a/css/index.css
+++ b/css/index.css
@@ -46,214 +46,3 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
-/* Set every element's box-sizing to border-box */
-* {
-    box-sizing: border-box;
-}
-
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
-}
-
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
-}
-
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
-body {
-	width: 1000px;
-	box-sizing: border-box;
-	margin: 0 auto;
-}
-nav {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-evenly;
-	width:1000px;
-	margin: 35px 0px;
-	border:1px solid red;
-}
-nav a {
-	margin: 12px 12px;
-	text-decoration: none;
-	color:black;
-	font-size:14px;
-}
-.container {
-	display: flex;
-	align-items: center;
-	border-bottom: 1px solid gray;
-	padding: 50px 0;
-	margin-bottom: 30px;
-}
-.phrase {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-h1 {
-	width:500px;
-	text-align: center;
-	font-size: 48px;
-}
-button {
-	border: 1px solid black;
-	width: 30%;
-	height: 30%;
-}
-button p {
-	text-align: center;
-}
-.imageOne{
-	display:flex;
-	height: 75%;
-	width: 75%;
-	justify-content: center;
-}
-.imageCode {
-	margin-top: 40px;
-	height: 45%;
-	width: 45%;
-}
-.foldOne {
-	display: flex;
-	padding: 10px 0;
-	justify-content: space-between;
-	margin-bottom: 20px;
-}
-.features {
-	padding-left: 17px;
-	width: 40%;
-}
-.about {
-	width: 40%;
-	padding-right:15px;
-}
-
-.imageTwo {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 30px;
-}
-.middle-img {
-	flex-grow: 1;
-}
-.foldTwo{
-	display: flex;
-	justify-content: space-between;
-	width: 96%;
-	margin: 0 auto;
-	margin-bottom: 20px;
-}
-.services {
-	width: 18%;
-}
-.product {
-	width: 18%;
-}
-.vision{
-	width: 18%;
-}
-
-footer {
-	display:flex;
-}
-.contact {
-	padding: 20px;
-	margin-bottom: 20px;
-}
-.contact > p {
-	line-height: 1.5;
-}
-.contact p {
-	width: 80%;
-	margin: 10px 0px;
-}
-
-.services-header-img-container{
-	margin: 0 auto;
-	display: flex;
-	justify-content: center;
-}
-.services-header-img{
-	flex-grow:1;
-}
-.container-one {
-	margin-bottom: 10px;
-	width: 95%;
-	border-bottom: 1px solid black;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-}
-.container-one h1 {
-	align-self: flex-start;
-	width: 10%;
-}
-
-.container-two {
-	display: flex;
-	flex-direction: row;
-	border-bottom: 1px solid black;
-	width: 95%;
-	margin: 0 auto;
-}
-.vertical-containment{
-	display: flex;
-
-	flex-direction: column;
-	align-items: center;
-}
-.little-boxes {
-	width: 60%;
-	border: 1px solid black;
-	background-color: #ede8e3;
-	display: flex;
-	flex-direction: column;
-	margin: 20px auto;
-	align-items: baseline;
-}
-.little-boxes h2{
-	margin: 10px 20px;
-}
-.little-boxes p{
-	margin: 10px 10px;
-}
-.learn-more {
-	border: 1px solid black;
-	align-self: justify;
-	margin: 10px 10px;
-	background-color: white;
-	border-radius: 25px;
-	padding: 5px 30px;
-}
-.container-three {
-	display: flex;
-	flex-direction: row;
-	width: 95%;
-	margin: 0 auto;
-}
-
-.placeholder h2 {
-	margin: 20px 10px;
-}
-.placeholder p{
-	margin: 20px 10px;
-}
-.placeholder ul {
-	margin: 10px 30px;
-}
-li {
-	list-style-type: square;
-}
-.copyright {
-	font-family: "Indie Flower", cursive;
-	text-align: center;
-	align-self: flex-end;
-	margin: 0 auto;
-	padding: 30px 30px;
-}
